Features Page: corrected behaviour/sizing/positioning of box overlays so text does not get cut off

--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -13,22 +13,73 @@
 }
 
 .box-overlay {
+	margin-top:$standard-spacing/1.5;
 	padding:40px 32px 32px;
 	border:1px solid $lightgray;
 	background:white;
 	position: relative;
+	z-index: 1;
+	h3 {
+		margin-top:0;
+		margin-bottom:$standard-spacing/3;
+		// Separator line
+		&:after {
+			content:" ";
+			display: block;
+			padding-top: $standard-spacing/3;
+			border-bottom:1px solid $brown;
+			width:40px;
+			margin:0 auto;
+		}
+	}
 	.close-icon {
 		display:none;
-		height:20px;
-		width:20px;
 		position: absolute;
-		top:20px;
-		right:20px;
+		height:10px;
+		width:10px;
+		top:10px;
+		right:10px;
 	}
 	p {
 		line-height: 1.7;
 		max-width: 400px;
 		margin:0 auto;
+	}
+	&.show ~ .guitar-feature-image {
+
+	}
+}
+
+// iPad portrait view
+@media (min-width: 768px) and (max-width: 991px) {
+	.box-overlay {
+		p {
+			font-size:12px;
+		}
+		h3 {
+			font-size:24px;
+			margin-bottom:$standard-spacing/4;
+			&:after {
+				padding-top: $standard-spacing/4;
+			}
+		}
+	}
+}
+
+@media (min-width: 992px) {
+	.box-overlay {
+		p {
+			font-size:inherit;
+		}
+		h3 {
+			font-size:24px;
+		}
+		.close-icon {
+			height:20px;
+			width:20px;
+			top:20px;
+			right:20px;
+		}
 	}
 }
 
@@ -36,23 +87,10 @@
 	.col-md-6 {
 		margin-top:$standard-spacing*1.25;
 		position: relative;
-		.guitar-feature-image {
+				.guitar-feature-image {
 			height:auto;
 			width:100%;
 			position: relative;
-		}
-		h3 {
-			margin-top:0;
-			margin-bottom:$standard-spacing/3;
-			// Separator line
-			&:after {
-				content:" ";
-				display: block;
-				padding-top: $standard-spacing/3;
-				border-bottom:1px solid $brown;
-				width:40px;
-				margin:0 auto;
-			}
 		}
 		.box-overlay {
 			@include transition-property(opacity);
@@ -72,7 +110,7 @@
 	}
 }
 
-@media (min-width: 992px) and (max-width: 1200px) {
+@media (min-width: 992px) and (max-width: 1199px) {
 	.page-features-and-specs {
 		.col-md-6 {
 			font-size:14px;
@@ -84,14 +122,25 @@
 	}
 }
 
-@media (min-width: 624px) {
+@media (min-width: 992px) {
+	.box-overlay {
+		min-height: 324px;
+	}
+}
+
+@media (min-width: 1200px) {
+	.box-overlay {
+		min-height: 372px;
+	}
+}
+
+@media (min-width: 768px) {
 	.page-features-and-specs {
 		.col-md-6 {
 			.box-overlay {
 				opacity: 0;
 				position: absolute;
 				top:0;
-				bottom:0;
 				right: 0;
 				left: 0;
 				margin: 0 15px;
